# Face_Age_Guessing

./: .gitignore  README.md  pyproject.toml
.agents/: init.md  project-handoff.md
.memory/: decisions.md  progress.md
docs/: data-fetch-agent-runbook.md  dataset-access-forms.md  dataset-download-inspection.md  dataset-source-links.md  face-image-manifest-template.csv  free-dataset-candidates.csv  phase-4-data-shape-validation.md  phase-5a-ux-qa.md  phase-5b-free-dataset-search.md  phase-5b-image-sourcing-plan.md  phase-5c-source-review.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  faceManifest.ts  styles.css
scripts/: build_faces_lifespan_candidate_manifest.py  build_fgnet_candidate_manifest.py  build_real_face_set.py  fetch_faces_lifespan_metadata.py  fill_faces_pdf.py
src/: analytics.py  api.py  database.py  server.py
