[project]
name = "Face_Age_Guessing"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "pypdf>=6.14.2",
    "reportlab>=5.0.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
"pytest",
"ruff",
"mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
